# ai_ji_ke

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/提示词/: 课程标签.json
scripts/: upload_courses.py
src/: __main__.py  app.py  assign_labels.py  auth.py  browser.py  cli.py  compressor.py  config.py  crawler_runner.py  downloader.py  label_manager.py  labels_config.json  learning_progress.py  main.py  markdown.py  models.py  parser.py  progress.py  settings.py  storage.py  task_manager.py  utils.py
src/templates/: _course_base.html  admin_invitations.html  admin_settings.html  admin_users.html  base.html  course_detail.html  course_lesson_preview.html  courses.html  forgot_password.html  login.html  my_courses.html  register.html  reset_password.html  settings.html  task_detail.html  tasks.html
