[project]
name = "ai_ji_ke"
version = "1.0.0"
description = "爱极客个人学习平台(个人项目, 禁止商业目的使用)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Simeon"}
]
dependencies = [
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.1",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "markdownify>=0.11.6",
    # Web management UI
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.6",
    "appdirs>=1.4.4",
    # Authentication
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["templates/*", "static/*"]
